[gd_scene load_steps=15 format=2]

[ext_resource path="res://themes/DefaultText.tres" type="Theme" id=1]
[ext_resource path="res://voices/1_communicator_notification.6.ogg" type="AudioStream" id=2]
[ext_resource path="res://scripts/Cinematograph.gd" type="Script" id=3]
[ext_resource path="res://cinematograph_reels/0.clean.tres" type="Animation" id=4]
[ext_resource path="res://images/waiting.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Cinematograph" type="Control"]
anchor_top = 0.00131774
anchor_right = 1.0
anchor_bottom = 1.00132
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="RichTextLabel" parent="."]
visible = false
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "voice"

[node name="Player" type="AnimationPlayer" parent="."]
anims/0 = ExtResource( 4 )

[node name="Skip" type="TextureButton" parent="."]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
disabled = true
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waiting" type="AnimatedSprite" parent="."]
position = Vector2( 1875.2, 39.0845 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
frame = 5
playing = true
[connection signal="animation_finished" from="Player" to="." method="_on_Player_animation_finished"]
[connection signal="animation_started" from="Player" to="." method="_on_Player_animation_started"]
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
